fixed wrong margins of button menu

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -65,7 +65,6 @@
 				.nav__main-nav
 					flex-direction: column
 					margin-left: 20px
-					padding: 1rem 0
 					.main-nav__item
 						.main-nav__link
 							padding: 8px 10px
