--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -73,6 +73,7 @@ h6
 	border-radius: 5px
 	color: #ffffff
 	font-family: $headers-font	
+	margin-bottom: 1rem
 	display: none
 
 .main	
@@ -200,7 +201,7 @@ h6
 									color: $accent
 
 .top-slider
-	padding-bottom: 20px
+	padding: 1rem 0 20px
 	.top-slider__slider
 		.top-slider__item
 			margin-left: 5px
